--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Demi Vasques"
-  avatar           : "demi_profile.png"
+  avatar           : "images/demi_profile.png"
   bio              : "Complexity, networks, and computational methods in the humanities and social sciences"
-  location         : "Mainz"
+  location         : "Mainz, Germany"
   employer         : 
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=f8pD2ucAAAAJ&hl=en"
